# Plants

./: .gitignore  2026-03-18-013935-questo-progetto-con-c-e-raylib-e-funge-su-deskt.txt  AGENTS.md  CLAUDE.md  CLAUDE.original.md  Container.cs  Mouse.cs  PROJECT_STRUCTURE.md  Particles.cs  Plants.csproj  Plants.sln  Program.cs  Rendering.cs  Save Data Location.lnk  TrayIcon.cs  build.bat  dati_plants.xlsx  desktop.ini  linker.xml  push.bat
.claude/: settings.json  settings.local.json
Assets/: logo.pdn
Assets/shader/: base.frag  base.vert  recolor.frag  seed.frag
Effects/: Particles.cs
Engine/: DebugConsole.cs  NotificationManager.cs  PixelCamera.cs  Rendering.cs
Engine/GameGeneral/: AssetLoader.cs  GameElement.cs  GameFunctions.cs  Room.cs  Sprite.cs
Engine/Gui/: ColorFieldRenderer.cs  Gui.cs  RenderTexture2DFieldRenderer.cs  Texture2DFieldRenderer.cs  window.cs
Engine/Tools/: CoordinateHelper.cs  CrashLogger.cs  Helpers.cs  MathHelper.cs  Mouse.cs  RandomHelper.cs  RandomUtils.cs  SaveHelper.cs  ShortcutInstaller.cs  TrayIcon.cs  Utils.cs  ViewCulling.cs  Windowstatehelper.cs
Game/: Controller.cs  Game.cs  GameProperties.cs  Plant.cs  Ramo.cs  WeatherSystem.cs
Game/Core/: AGENTS.md  Background.cs  CompostSystem.cs  Controller.cs  FaseGiorno.cs  Game.cs  GameConfig.cs  GameLogic.cs  GameProperties.cs  GameSaveManager.cs  Ground.cs  NotificationMonitor.cs  Obj_Controller.cs  Obj_Tutorial.cs  OxygenSystem.cs  Plant.cs  PlantStats.cs  Radice.cs  Ramo.cs  SeedFusionManager.cs  SeedRecoverySystem.cs  SeedUpgradeSystem.cs  StarterSeedSystem.cs  Tutorial.cs  UpgradeSystem.cs  WaterSystem.cs  WeatherRender.cs  WeatherSystem.cs  WorldManager.cs  WorldRender.cs  WorldStats.cs  test.cs
Game/Definitions/: ClimateDefinitions.cs  GuiTheme.cs  PlantStats.cs  Seed.cs  SeedDefinitions.cs  SeedStatScaling.cs  WorldDefinitions.cs
Game/Effects/: ObjParticles.cs  ObjWater.cs  Particles.cs  Water.cs
Game/Gui/: GuiBar.cs  GuiButton.cs  GuiIconButton.cs  GuiInventoryBackground.cs  GuiInventoryGrid.cs  GuiScrollbar.cs  GuiSeedDetailPanel.cs  GuiStatsPanel.cs  GuiToolbar.cs  GuiWorldTransition.cs  Obj_GuiBottomNavigation.cs  Obj_GuiCompostBackground.cs  Obj_GuiCompostPanel.cs  Obj_GuiInventoryBackground.cs  Obj_GuiInventoryCrates.cs  Obj_GuiInventoryGrid.cs  Obj_GuiMorte.cs  Obj_GuiPiantaggio.cs  Obj_GuiScrollbar.cs  Obj_GuiSeedDetailPanel.cs  Obj_GuiSeedRecovery.cs  Obj_GuiStatsPanel.cs  Obj_GuiToolbar.cs  Obj_GuiWorldTransition.cs  Obj_Logo.cs  SeedRarityHelper.cs  SeedSorter.cs  SeedStatsDrawer.cs
Game/Items/: ItemDefinition.cs  (+3 more)
GameGeneral/: AssetLoader.cs  Game.cs  GameElement.cs  GameFunctions.cs  GameProperties.cs  Sprite.cs
Gui/: Container.cs  GuiBar.cs  GuiButton.cs
Native/Android/: CMakeLists.txt  bridge.c  build.bat  build.sh
Plants.Android/: AndroidBridge.cs  AndroidGameInit.cs  MainActivity.cs  Plants.Android.csproj
Tools/: FaseGiorno.cs  Mouse.cs  TrayIcon.cs  Utils.cs
(+81 files in other folders)
